# ocaml-ggml

./: .gitignore  .gitmodules  .roomodes  LICENSE  Makefile  PLAN_gpt2_bindings.md  README.md  dune  main.ml  playwright.config.ts  visualize.ml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/features/ocaml/: devcontainer-feature.json  install.sh
.devcontainer/features/pip-packages/: devcontainer-feature.json  install.sh
.devcontainer/ocaml-devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml
.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
ggml-ocaml/: Makefile  dune  foo.ml  function_description.ml  type_description.ml  types.ml
ggml-ocaml/const/: dune  type_const.ml
ggml.x/: dune  dune-project  dune.x  ggml.opam  ggml_bindings.ml
ggml.x/generator/: dune  generate.ml
lib/: Makefile  dune  function_description.ml  ggml_model_explorer.ml  model_explorer.ml  type_description.ml  types.ml  types.mli
lib/const/: type_const.ml
lib/ggml/: dune  function_description.ml  function_description_backend.ml  function_description_cpu.ml  function_description_gguf.ml  function_description_opt.ml  type_description.ml  types.ml
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
scripts/: server.sh
src/: Makefile  hello.ml
src/gpt2/: Makefile  dune  function_description.ml  gpt-2-lib.cpp  gpt-2-lib.h  gpt-2-main.cpp  type_description.ml
src/magika/: Makefile  dune  function_description.ml  magika-lib.cpp  magika-lib.h  magika-main.cpp  type_description.ml
src/yolo/: Makefile  dune  function_description.ml  type_description.ml  yolo-lib.cpp  yolo-lib.h  yolo-main.cpp
test/: dune  ggml_test.ml  gpt2_test.ml  magika_test.ml  model_explorer_test.ml  visual_explorer_test.ml  yolo_test.ml
tests/: image-exlorer.spec.ts
