(lang dune 3.11)
(name ggml)
(generate_opam_files true)

(package
 (name ggml)
 (synopsis "OCaml bindings for ggml")
 (description "OCaml bindings for the ggml tensor library")
 (authors "Your Name")
 (license MIT)
 (depends
  (ocaml (>= 4.14.0))
  (dune (>= 3.11))
  (ctypes (>= 0.20.1))
  (ctypes-foreign (>= 0.20.1))))