(rule
 (deps
  (file Makefile)
  (file gpt-2-lib.cpp)
  (file gpt-2-lib.h)
  (file %{project_root}/lib/ggml/ggml.h)
  (source_tree %{project_root}/vendored/ggml/examples))
 (targets libgpt_2.a dllgpt_2.so)
 (action
  (no-infer
   (progn
    (run make BIN=%{project_root} GGML=%{project_root}/vendored/ggml lib)))))

(library
 (name gpt_2)
 (libraries ggml)
 (foreign_archives gpt_2)
 (ctypes
  (external_library_name libgpt_2)
  (build_flags_resolver
   (vendored
    (c_flags :standard -I %{project_root}/lib/ggml)))
  (headers
   (preamble "#include \"gpt-2-lib.h\""))
  (type_description
   (instance Types)
   (functor Type_description))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
