(rule
 (deps
  (file Makefile)
  (file magika-lib.cpp)
  (file magika-lib.h)
  (file %{project_root}/lib/ggml/ggml.h)
  (source_tree %{project_root}/vendored/ggml/examples))
 (targets libmagika.a dllmagika.so)
 (action
  (no-infer
   (progn
    (run make BIN=%{project_root} GGML=%{project_root}/vendored/ggml lib)))))

(library
 (name magika)
 (libraries ggml)
 (foreign_archives magika)
 (ctypes
  (external_library_name libmagika)
  (build_flags_resolver
   (vendored
    (c_flags :standard -I %{project_root}/lib/ggml)))
  (headers
   (preamble "#include \"magika-lib.h\""))
  (type_description
   (instance Types)
   (functor Type_description))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
